fixed wishlist card text overflow when closed

--- a/wishlist-eliminator-app/src/components/wishlist/WishlistDisplay.scss
+++ b/wishlist-eliminator-app/src/components/wishlist/WishlistDisplay.scss
@@ -9,6 +9,7 @@
 
     background-color: rgb(24, 24, 143);
     color: white;
+    overflow-y: hidden;
 }
 
 .WishlistCard-height {
